--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
     
     <div class="max-width">
       <div class="home-content">
-          <div class="text-1">Hello, my name is</div>
-          <div class="text-2">Mahmoud Mansour</div>
-          <div class="text-3">Welcome to my Personal Website</div>
+          <div class="text-1">Hello, my name is Mahmoud Mansour</div>
+          <div class="text-2">Welcome to my Personal Website</div>
           <a href="about.html">Learn More</a>
       </div>
     </div>
