--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <html>
   
 <meta charset="UTF-8">
-<title>About me</title>
+<title>A lil bit about ME!!</title>
 <link href="style.css" rel="stylesheet">
 <body>
 
@@ -29,10 +29,7 @@
 
           
           <div class="text">
-            Hello! My name is Erlangga but most people call me Aang (like the avatar). I am currently a junior at New Mexico State University studying computer Science. 
-            I am from the city of Batam in Indonesia where I grew up for the first 16 years of my life before my life changed in 2018. That year, I was selected as a 
-            recipient of the KL-YES scholarship from the Department of State which allowed me to come to the United States. Since I got to the US, I have been involved 
-            in many things such as being a volunteer for AFS, sports team, NMSU's E-Sport team, and Sigma Chi Fraternity
+            Hello! My name is Mahmoud Mansour usually go by Mack. I am an international student from Egypt. I came to Albuquerque back in 2018 and it has been amazing since. I love playing games and getting more mechanical/ custom keyboards.
           </div>
       </div>
     </div>
@@ -41,7 +38,7 @@
 </body>
 
 <footer>
-  <p> Made by Erlangga Pangestu 2023</p>
+  <p> Made by me (Mahmoud Mansour) 2025</p>
 </footer>
 
 </html>
