--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Contact Information</title>
+  <title>Contact Me</title>
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <div id="header">
-    <h1>Contact Information</h1>
+    <h1>Contact Me if you want</h1>
   </div>
 
   <div class="navBar">
@@ -24,18 +24,18 @@
     <div id="contact-content">
       <p>Connect with me on social media:</p>
       <div id="social-buttons">
-        <a href="https://www.instagram.com/erlanggakp01" target="_blank"><img id = "insta" src="files/instagram.png" alt="Instagram Logo">Instagram</a>
-        <a href="https://www.snapchat.com/add/anggaultra" target="_blank"><img id = "snap" src="files/snapchat.png" alt="Snapchat Logo">Snapchat</a>
-        <a href="https://www.linkedin.com/in/erlangga-pangestu-a4003a16b/" target="_blank"><img id = "linkedin" src="files/linkedin.png" alt="LinkedIn logo">LinkedIn</a>
+        <a href="https://www.instagram.com" target="_blank"><img id = "insta" src="files/instagram.png" alt="Instagram Logo">Instagram</a>
+        <a href="https://www.snapchat.com" target="_blank"><img id = "snap" src="files/snapchat.png" alt="Snapchat Logo">Snapchat</a>
+        <a href="https://www.linkedin.com/in/mahmoud-mansour-b67a8132a/" target="_blank"><img id = "linkedin" src="files/linkedin.png" alt="LinkedIn logo">LinkedIn</a>
         
       </div>
-      <p>Or email me through:</p>
-      <a href="mailto:erlangga@nmsu.edu" class="email-button"><img id="email" src="files/email.png" alt="Email Logo">Send Email</a>
+      <p>Or email me on the NMSU Email:</p>
+      <a href="mailto:mman@nmsu.edu" class="email-button"><img id="email" src="files/email.png" alt="Email Logo">Send Email</a>
     </div>
   </div>
   
   <footer>
-    <p> Made by Erlangga Pangestu 2023</p>
+    <p> Made by ME (Mahmoud Mansour) 2025</p>
   </footer>
 </body>
 </html>
