--- a/interests.html
+++ b/interests.html
@@ -3,12 +3,12 @@
 <html>
   
 <meta charset="UTF-8">
-<title>Hobbies and Interests</title>
+<title> Things I Like </title>
 <link href="style.css" rel="stylesheet">
 <body>
 
   <div id = "header">
-    <h1> Hobbies and Interests </h1>
+    <h1> Things I Like </h1>
   </div>
 
   <div class="navBar">
@@ -27,11 +27,9 @@
       <div class="card">
         <img src="files/soundcloud.png" alt="Soundcloud" style="width:35%; margin-left: auto; margin-right: auto; display: flex;" >
         <div class="container">
-          <h2 style="text-align: center;">Music </h2>
+          <h2 style="text-align: center;">Sports & Working out</h2>
           <p>
-            I grew up in a musical family. Both my parents either sing or play an instrument. This early exposure to music helped me grow my love for it. When I was 12 I started singing
-            lessons. When I turned 14, I picked up my first instrument, the guitar. By the time I was 15, I uploaded my first song online and I kept making songs every now and then. Even
-            though I was not the best at it, I always enjoyed having a creative outlet through it.
+            I played a lot of sports growing up. I started working out because I wanted to be better at sports but learned to like more as I grew up.
           </p>
           <a href="https://soundcloud.com/anggaultra">Click here to visit my soundcloud page</a>
         </div>
@@ -44,11 +42,9 @@
         <div class="container">
           <h2 style="text-align: center;">Games</h2>
           <p>
-            I discovered video games when I was about 5 years old when my uncle brought his Playstation 2 to my house for a weekend. I vividly remember playing my first ever video 
-            game which was Grand Theft Auto: San Andreas (very inappropriate for a 5 year old haha). This immediately got me hooked and when I was around 14 I discovered E-Sports. I 
-            am a very competitive person and I use that desire to win to get better. This trait lends itself well to when I played Counter Strike competitively for a few year. In recent 
-            years, I have been involved with the NMSU E-Sports team but not to the degree that I was at when I competed.
-
+            I started playing games first on Playstation 2 which was a gift from my dad for my birthday. I played a lot of game like "The incredibles the rise of underminer", Barnyard, Tekken 2, and Crazy Frog.
+            Nowadays I play Leauge of Legends, Part of Crimson team, as my main game and then I play games like Marvel Rivals and ThroneFall when I need breaks. I put a Steam Icon beacuse I play a lot of games on in.
+            
           </p>
         </div>
       </div>
@@ -58,12 +54,9 @@
       <div class="card">
         <img src="files/sig.JPG" alt="Sigma Chi" style="width:50%; display: flex; margin-left: auto; margin-right: auto;">
         <div class="container">
-          <h2 style="text-align: center;">Greek life</h2>
+          <h2 style="text-align: center;"> CATS </h2>
           <p>
-            I am a part of Sigma Chi fraternity of the Zeta Phi chapter at New Mexico State University. The friends and connections I have made through Sigma Chi in the past two and 
-            a half years are irreplacable. My favorite aspects of being in a fraternity have been the Philantrophy events. In the 2021-2022 academic year, we as a chapter raised over 
-            $20,000 which is comparable to some of the bigger chapters in bigger schools. This led to our biggest achievement as a chapter yet, winning the Gold Peterson award and being
-            ranked number 2 between all Sigma Chi chapters
+            I love Cats so here is a picture of my Cat LULU
           </p>
         </div>
       </div>
@@ -73,7 +66,7 @@
 </body>
 
 <footer>
-  <p> Made by Erlangga Pangestu 2023</p>
+  <p> Made by ME (Mahmoud Mansour) 2025</p>
 </footer>
 
 </html>
