--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="home-content">
           <div class="text-1">Hello, my name is Mahmoud Mansour</div>
           <div class="text-2">Welcome to my Personal Website</div>
-          <a href="about.html">Learn More</a>
+          <a href="about.html">I am sending you to ANOTHER tab</a>
       </div>
     </div>
   </div>
