--- a/projects.html
+++ b/projects.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html>
+k<!DOCTYPE html>
 
 <html>
   
 <meta charset="UTF-8">
-<title>Projects</title>
+<title>Ekko</title>
 <link href="style.css" rel="stylesheet">
 <body>
 
   <div id = "header">
-    <h1> Fun websites </h1>
+    <h1> My Main </h1>
   </div>
 
   <div class="navBar">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="projects.html">Projects</a></li>
+      <li><a href="projects.html">Ekko</a></li>
       <li><a href="interests.html">Interests</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="about.html">About Me</a></li>
@@ -63,7 +63,7 @@
 </body>
 
 <footer>
-  <p> Made by Erlangga Pangestu 2023</p>
+  <p> Made by ME (Mahmoud Mansour) 2025</p>
 </footer>
 
 </html>
