--- a/projects.html
+++ b/projects.html
@@ -1,14 +1,13 @@
-k<!DOCTYPE html>
-
+<!DOCTYPE html>
 <html>
-  
+
 <meta charset="UTF-8">
 <title>Ekko</title>
 <link href="style.css" rel="stylesheet">
 <body>
 
-  <div id = "header">
-    <h1> My Main </h1>
+  <div id="header">
+    <h1>My Main</h1>
   </div>
 
   <div class="navBar">
@@ -24,46 +23,31 @@ k<!DOCTYPE html>
   <div class="row">
     <div class="column">
       <div class="card">
-        <p><a href="https://www.geoguessr.com/"><img src="files/stock1.jpg" alt="stock1" style="width:50%; margin-left: auto; margin-right: auto; display: flex;" ></a></p>
-        <div class="container">
-          <h2 style="text-align: center;"> I </h2>
-          <p>
-            I don't have any projects that can be showcased yet so I decided to have a little bit of fun. 
-          </p>
-        </div>
+        <p><img src="files/Ekko0.jpg" alt="Ekko0" style="width:80%; margin: 0 auto; display: block;"></p>
       </div>
     </div>
 
     <div class="column">
       <div class="card">
-        <p><a href="https://www.ocearch.org/tracker/"><img src="files/stock2.jpg" alt="stock2" style="width:55%; display: flex; margin-left: auto; margin-right: auto;"></a></p>
-        <div class="container">
-          <h2 style="text-align: center;">Don't</h2>
-          <p>
-            Each of these image will link to a random website (all SFW) that I just find fun.
-
-          </p>
-        </div>
+        <p><img src="files/Ekko1.jpg" alt="Ekko1" style="width:80%; margin: 0 auto; display: block;"></p>
       </div>
     </div>
 
     <div class="column">
       <div class="card">
-        <p><a href="http://boilthefrog.playlistmachinery.com/"><img src="files/stock3.jpg" alt="stock3" style="width:60%; display: flex; margin-left: auto; margin-right: auto;"></a></p>
-        <div class="container">
-          <h2 style="text-align: center;">Know</h2>
-          <p>
-            These websites are just fun things I go to when I am bored.
-          </p>
-        </div>
+        <p><img src="files/Ekko2.jpg" alt="Ekko2" style="width:80%; margin: 0 auto; display: block;"></p>
       </div>
     </div>
+  </div>
+
+  <div style="text-align: center; margin-top: 20px;">
+    <p style="font-size: 20px;">This is my main from League of Legends.</p>
   </div>
 
 </body>
 
 <footer>
-  <p> Made by ME (Mahmoud Mansour) 2025</p>
+  <p>Made by ME (Mahmoud Mansour) 2025</p>
 </footer>
 
 </html>
