--- a/Ekko.html
+++ b/Ekko.html
@@ -23,19 +23,19 @@
   <div class="row">
     <div class="column">
       <div class="card">
-        <p><img src="files/Ekko0.jpg" alt="Ekko0" style="width:80%; margin: 0 auto; display: block;"></p>
+        <p><img src="files/Ekko0.jpg" alt="Ekko" style="width:80%; margin: 0 auto; display: block;"></p>
       </div>
     </div>
 
     <div class="column">
       <div class="card">
-        <p><img src="files/Ekko1.jpg" alt="Ekko1" style="width:80%; margin: 0 auto; display: block;"></p>
+        <p><img src="files/Ekko1.jpg" alt="Prestige Star Guardian Ekko" style="width:80%; margin: 0 auto; display: block;"></p>
       </div>
     </div>
 
     <div class="column">
       <div class="card">
-        <p><img src="files/Ekko2.jpg" alt="Ekko2" style="width:80%; margin: 0 auto; display: block;"></p>
+        <p><img src="files/Ekko2.jpg" alt="Treu Damage Ekko" style="width:80%; margin: 0 auto; display: block;"></p>
       </div>
     </div>
   </div>
