--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <div class="navBar">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="projects.html">Ekko</a></li>
+      <li><a href="Ekko.html">Ekko</a></li>
       <li><a href="interests.html">Interests</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="about.html">About Me</a></li>
