--- a/interests.html
+++ b/interests.html
@@ -14,7 +14,7 @@
   <div class="navBar">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="projects.html">Ekko</a></li>
+      <li><a href="ekko.html">Ekko</a></li>
       <li><a href="interests.html">Interests</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="about.html">About Me</a></li>
@@ -27,9 +27,9 @@
       <div class="card">
         <img src="files/soundcloud.png" alt="Soundcloud" style="width:35%; margin-left: auto; margin-right: auto; display: flex;" >
         <div class="container">
-          <h2 style="text-align: center;">Sports & Working out</h2>
+          <h2 style="text-align: center;"> CATS </h2>
           <p>
-            I played a lot of sports growing up. I started working out because I wanted to be better at sports but learned to like more as I grew up.
+            I love Cats so here is a picture of my Cat Tasha
           </p>
         </div>
       </div>
@@ -55,7 +55,7 @@
         <div class="container">
           <h2 style="text-align: center;"> CATS </h2>
           <p>
-            I love Cats so here is a picture of my Cat LULU
+            I love Cats so here is a picture of my other Cat Lulu
           </p>
         </div>
       </div>
