--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     </ul>
   </div>
 
-  <img class="image" src= "files/moreme.jpg" alt="Me from 2021" style="display: flex; ">
+  <img class="image" src= "files/Me.jpg" alt="Me a while back" style="display: flex; ">
   <div id = "content">
     
     <div class="max-width">
