--- a/interests.html
+++ b/interests.html
@@ -25,7 +25,7 @@
   <div class="row">
     <div class="column">
       <div class="card">
-        <img src="files/soundcloud.png" alt="Soundcloud" style="width:35%; margin-left: auto; margin-right: auto; display: flex;" >
+        <img src="files/Tasha.jpg" alt="Tasha" style="width:35%; margin-left: auto; margin-right: auto; display: flex;" >
         <div class="container">
           <h2 style="text-align: center;"> CATS </h2>
           <p>
@@ -51,7 +51,7 @@
 
     <div class="column">
       <div class="card">
-        <img src="files/sig.JPG" alt="Sigma Chi" style="width:50%; display: flex; margin-left: auto; margin-right: auto;">
+        <img src="files/lulu.JPG" alt="LULU" style="width:50%; display: flex; margin-left: auto; margin-right: auto;">
         <div class="container">
           <h2 style="text-align: center;"> CATS </h2>
           <p>
