--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   </div>
   
-  <img class="image" src= "files/Me.jpg" alt="baby me">
+  <img class="image" src= "files/Me.JPG" alt="baby me">
 
   <div id = "content">
     
