--- a/interests.html
+++ b/interests.html
@@ -51,7 +51,7 @@
 
     <div class="column">
       <div class="card">
-        <img src="files/lulu.JPG" alt="LULU" style="width:50%; display: flex; margin-left: auto; margin-right: auto;">
+        <img src="files/lulu.jpg" alt="LULU" style="width:50%; display: flex; margin-left: auto; margin-right: auto;">
         <div class="container">
           <h2 style="text-align: center;"> CATS </h2>
           <p>
