--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     </ul>
 
   </div>
+
+  <button id="theme-toggle">Toggle Theme</button>
   
   <img class="image" src= "files/Me.JPG" alt="baby me">
 
