--- a/index.html
+++ b/index.html
@@ -42,5 +42,12 @@
 <footer>
   <p> Made by me (Mahmoud Mansour) 2025</p>
 </footer>
+  
+<script>
+  document.getElementById("theme-toggle").onclick = function() {
+    document.body.classList.toggle("dark");
+  };
+</script>
+  
 
 </html>
