--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <button id="theme-toggle">Toggle Theme</button>
   
-  <img class="image" src= "files/Me.JPG" alt="baby me">
+  <img class="image" src= "files/Me.JPG" alt="ME">
 
   <div id = "content">
     
