--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="ekko.html">Ekko</a></li>
       <li><a href="interests.html">Interests</a></li>
+      <li><a href="connect4.html">Connect 4</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="about.html">About Me</a></li>
     </ul>
